--- a/index.html
+++ b/index.html
@@ -1,45 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto"> 
-    <title>Navbar</title>
-</head>
-<body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="style.css" />
+        <link
+            rel="stylesheet"
+            href="https://fonts.googleapis.com/css?family=Roboto"
+        />
+        <title>Navbar</title>
+    </head>
+    <body>
+        <header>
+            <div class="container">
+                <div class="logo">
+                    <img src="images/logo.svg" alt="" />
+                    <div class="more">
+                        <li>
+                            <a class="social-icon">
+                                <i class="fa-solid fa-bars"></i
+                            ></a>
+                        </li>
+                    </div>
+                </div>
+                
+                <!-- header links -->
 
-<header>
-    <div class="container">
-        <div class="logo">
-            <img src="images/logo.svg" alt="">
-        </div>
-        <div class="icons">
+                <div class="menu">
+                    <ul>
+                        <li><a href="">Home</a></li>
+                        <li><a href="">About</a></li>
+                        <li><a href="">Project</a></li>
+                        <li><a href="">Contact</a></li>
+                    </ul>
+                </div>
+                <!-- social media icons -->
 
-            <ul class="social-icons">
-                <li><a href="" class="social-icon"> <i class="fa-brands fa-twitter"></i></a></li>
-                <li><a href="" class="social-icon"> <i class="fa-brands fa-facebook"></i></a></li>
-                <li><a href="" class="social-icon"> <i class="fa-brands fa-linkedin"></i></a></li>
-                <li><a href="" class="social-icon"> <i class="fa-brands fa-rss"></i></a></li>
-                <li><a href="" class="social-icon"> <i class="fa-brands fa-youtube"></i></a></li>
-                <li><a href="" class="social-icon"> <i class="fa-brands fa-github"></i></a></li>            
-            </ul>
-        </div>
-        <div class="more">
-            <li><a href="#" class="social-icon"> <i class="fa-solid fa-bars"></i></a></li>
-        </div>
-        <div class="menu">
-            <ul>
-                <li><a href="">Home</a> </li>
-                <li><a href="">About</a> </li>
-                <li><a href="">Project</a> </li>
-                <li><a href="">Contact</a> </li>
-            </ul>
-        </div>
+                <div class="icons">
+                    <ul class="social-icons">
+                        <li>
+                            <a href="" class="social-icon">
+                                <i class="fa-brands fa-twitter"></i
+                            ></a>
+                        </li>
+                        <li>
+                            <a href="" class="social-icon">
+                                <i class="fa-brands fa-facebook"></i
+                            ></a>
+                        </li>
+                        <li>
+                            <a href="" class="social-icon">
+                                <i class="fa-brands fa-linkedin"></i
+                            ></a>
+                        </li>
+                        <li>
+                            <a href="" class="social-icon">
+                                <i class="fa-brands fa-rss"></i
+                            ></a>
+                        </li>
+                        <li>
+                            <a href="" class="social-icon">
+                                <i class="fa-brands fa-youtube"></i
+                            ></a>
+                        </li>
+                        <li>
+                            <a href="" class="social-icon">
+                                <i class="fa-brands fa-github"></i
+                            ></a>
+                        </li>
+                    </ul>
+                </div>
+                <!-- Icon button for mobile -->
+              
+            </div>
+        </header>
+    </body>
 
-    </div>
-</header>
+    <!-- javascript -->
 
-</body>
+    <script src="script.js"></script>
 </html>
